Refactor projects.json formatting

--- a/mywebsite/src/assets/projects.json
+++ b/mywebsite/src/assets/projects.json
@@ -3,7 +3,7 @@
         {
             "anchorId": "peepee",
             "title": "poopoo",
-            "date": "September 2024 - In Progress",
+            "date": "September 2024 - In Progress"
         },
         {
             "anchorId": "math_storytelling_LLM_human_comparative_study",
