--- a/mywebsite/src/assets/projects.json
+++ b/mywebsite/src/assets/projects.json
@@ -3,7 +3,7 @@
         {
             "anchorId": "math_storytelling_LLM_human_comparative_study",
             "title": "Empirical Study on teaching Math through Storytelling",
-            "tags": ["Empirical methods", "Mixed Methods", "Human-Computer Interaction", "Education", "Storytelling"],
+            "tags": ["Empirical methods", "Mixed Methods", "Human-Computer Interaction", "Education", "Story Telling"],
             "date": "September 2024 - In Progress",
             "description": [
             "IFT6075 Empirical Methods in Human-Computer Interaction Final Project at University of Montreal",
