Updated summoner insight

--- a/mywebsite/src/assets/data/projects.json
+++ b/mywebsite/src/assets/data/projects.json
@@ -101,10 +101,11 @@
         {
             "anchorId": "summoner_insight",
             "title": "Analytics website for League of Legends",
-            "tags": ["React", "JavaScript", "Frontend", "API", "Software Engineering", ".Net", "C#"],
+            "tags": ["React", "JavaScript", "Frontend", "API", "Software Engineering", ".Net", "C#", "DevOps"],
             "date": "June 2024 - In Progress",
             "githubUrl": "https://github.com/AnalyticsLoL/SummonerInsight",
-            "videoUrl": "https://www.youtube.com/embed/5Jl8C4LcDDs?si=M6R4aeey91EhztYo"
+            "videoUrl": "https://www.youtube.com/embed/5Jl8C4LcDDs?si=M6R4aeey91EhztYo",
+            "websiteUrl": "http://dev.summonerinsight.com/"
         },
         {
             "anchorId": "sportsai_website",
