Update project tags in projects.json to include JavaScript and C#

--- a/mywebsite/src/assets/data/projects.json
+++ b/mywebsite/src/assets/data/projects.json
@@ -3,7 +3,7 @@
         {
             "anchorId": "math_storytelling_LLM_human_comparative_study",
             "title": "Empirical Study on Teaching Math through Storytelling",
-            "tags": ["Empirical methods", "Mixed Methods", "Human-Computer Interaction", "Education", "Story Telling", "AWS Elastic BeanStalk", "AWS Cloudfront", "AWS Amplify", "R", "React", ".Net"],
+            "tags": ["Empirical methods", "Mixed Methods", "Human-Computer Interaction", "Education", "Story Telling", "AWS Elastic BeanStalk", "AWS Cloudfront", "AWS Amplify", "R", "JavaScript", "React", "C#", ".Net"],
             "date": "September 2024 - December 2024",
             "description": [
             "IFT6075 Empirical Methods in Human-Computer Interaction Final Project at University of Montreal",
