Updated  video summoner insight status

--- a/mywebsite/src/assets/data/projects.json
+++ b/mywebsite/src/assets/data/projects.json
@@ -109,7 +109,7 @@
             "tags": ["React", "JavaScript", "Frontend", "API", "Software Engineering", ".Net", "C#", "DevOps", "UX Design"],
             "date": "June 2024 - In Progress",
             "githubUrl": "https://github.com/AnalyticsLoL/SummonerInsight",
-            "videoUrl": "https://www.youtube.com/embed/5Jl8C4LcDDs?si=M6R4aeey91EhztYo",
+            "videoUrl": "https://www.youtube.com/embed/9A0Es2ViUaA?si=M5oY9asFKHgkJbvK",
             "websiteUrl": "http://dev.summonerinsight.com/"
         },
         {
