--- a/mywebsite/src/assets/data/projects.json
+++ b/mywebsite/src/assets/data/projects.json
@@ -21,7 +21,7 @@
             ],
             "date": "June 2024 - In Progress",
             "githubUrl": "https://github.com/AnalyticsLoL/SummonerInsight",
-            "videoUrl": "https://www.youtube.com/embed/9A0Es2ViUaA?si=M5oY9asFKHgkJbvK",
+            "videoUrl": "https://www.youtube.com/embed/ZksTQdx19MU?si=YGJKUTVtG4t4aUyP",
             "websiteUrl": "http://dev.summonerinsight.com/"
         },
         {
