--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -19,6 +19,7 @@
     "fortawesome": "^0.0.1-security",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
