--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@shadcn/ui": "^0.0.4",
     "d3": "^7.9.0",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
@@ -23,7 +24,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
