--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -19,6 +19,7 @@
     "d3": "^7.9.0",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
