--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mywebsite",
+  "homepage": "https://elnukakujo.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
