--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "d3": "^7.9.0",
     "gh-pages": "^6.3.0",
+    "motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
