--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -23,7 +23,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.15",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
